--- a/nuevo.html
+++ b/nuevo.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/stylesFormulario.css">
     <title>Encuestas KI</title>
 </head>
 <body>
-    
+    <br>
+    <div>
+        <label for="nombreTxt" class="subtitle">Nombre del cuestionario:</label>
+        <input type="text" id="nombreTxt" style="margin-left: 10px;">
+    </div>
+    <br>
+    <div>
+        <label for="descTxt" class="subtitle">Agrega una descripcion de tu cuestionario:</label><br>
+        <input type="text" id="descTxt" style="min-width:900px; min-height:200px">
+    </div>
+    <br>
+    <div>
+        <a href="index.html"><button id="btnCancelar">Cancelar</button></a>
+    </div>
 </body>
 </html>
