agrega funcionalidad de agregar preguntas y respuestas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p class="title" id="tituloPrincipal">Encuestas KI</p>
         <p class="subtitle" id="subtituloPrincipal">By: Karim Sosa, Israel Sanchez</p>
         <a href="nuevo.html"><button id="btnNuevo" class="btnInicioN">Nueva encuesta</button></a>
-        <button id="btnGuardadas" class="btnInicioG">Mis encuestas</button>
+        <a href="signIn.html"><button id="btnGuardadas" class="btnInicioG">Iniciar sesion</button></a>
     </div>
 </body>
 </html>
