Lo mismo que el anterior

--- a/nuevo.html
+++ b/nuevo.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div>
-        <form method="POST" class="container">
+        <form class="container">
             <h1>Nuevo cuestionario</h1>
             <br>
             <div>
