--- a/nuevo.html
+++ b/nuevo.html
@@ -31,7 +31,7 @@
             <br>
             <button type="button" id="newQuestion" class="newQuestion">Nueva pregunta</button>
             
-            <button type="submit" id="terminar" disabled>Terminar</button>
+            <button type="button" id="terminar" disabled>Terminar</button>
             <a href="index.html"><button type="button" id="btnCancelar" class="cancel">Cancelar</button></a>
         </form>
     </div>
